client/assets/styles/scss/layout/instances-list.scss
// instances list
.instances-list {
  background: $gray-lighterest;
  border-right: 1px solid $gray-lighter;
  display: none;
  float: left;
  height: 100vh;
  overflow-y: auto;
  padding-top: 4px; // line up with sidebar icon
  position: relative;
  width: $instance-list-width;

  &.in {
    display: block;

    // if nav is open
    + .instance-wrapper {
      float: right;
      width: calc(100% - #{$instance-list-width});
    }
  }

  .list {
    margin: 0 12px; // matches instance sidebar margin
    padding: 9px 0 15px;

    + .list {
      border-top: 1px solid $gray-lighter;
    }

    // list of isolated containers
    &.list-isolated {
      margin: 0;
      padding: 0;
      width: 100%;

      .list-item {
        border: 0;
        padding: 0;
      }
    }
  }

  .list-item {
    align-items: center;
    border: 1px solid transparent;
    display: flex;
    flex: 1 1 auto;
    font-size: 15px;
    height: 30px;
    line-height: 28px;

    // list title
    &.list-item-header {
      color: darken($gray-light,10%);
      padding: 0 9px 0 27px; // spacing for .status-icon

      &:hover .icons-advanced {
        opacity: .75;
      }
    }

    // open/active and isolated states
    &.open {
      background: rgba($purple-light,.1);
      border-color: rgba($purple-light,.3);
      border-radius: $input-border-radius;

      // is isolated
      &.isolated {
        flex-wrap: wrap;
        height: auto;

        .icons-overflow-isolated {
          display: block;
        }
      }
    }

    // gear icon
    .icons-advanced {
      cursor: pointer;
      opacity: .6;
      pointer-events: auto;
      transition: opacity .15s, transform .15s;

      &:hover {
        transform: rotate3d(0,0,1,30deg);
      }

      &:active {
        opacity: 1;
        transform: rotate3d(0,0,1,60deg);
      }
    }
  }

  .list-item-container {
    @extend %text-overflow;
    align-items: center;
    color: $gray;
    cursor: pointer;
    display: flex;
    flex: 1 1 auto;
    font-weight: $weight-bold;
    padding: 0 9px;

    &:hover {
      color: $purple-light;
    }

    &:active,
    &.active {
      color: $purple-light;
    }

    &.active {
      cursor: default;
    }
  }

  // status icon
  .icons-status {
    flex: 0 0 9px;
    margin-right: 9px;
  }

  // name
  .text-overflow {
    flex: 1 1 auto;
  }

  // configure/overflow
  .iconnables {
    cursor: pointer;
    flex: 0 0 15px;
    margin-left: 5px;
    pointer-events: auto; // override iconnables default
  }

  .icons-overflow {
    color: $gray;
    flex: 0 0 auto;
    margin-right: -6px;
    padding: 0 5px;

    &:hover {
      color: $gray-dark;
    }

    &:active,
    &.active {
      color: $purple-light;
    }

    &.active {
      display: block;
    }
  }

  .icons-advanced {
    margin-right: -1px;
  }

  // "more…" button
  .btn-more-containers {
    color: darken($gray-light,10%);
    font-style: italic;
    left: 15px;

    &:hover {
      color: $purple-light;
    }

    &:active {
      color: $purple-light;
    }
  }

  .btn-add-branches {
    height: 21px;
    line-height: 17px;
    margin: 9px 0 3px 21px;
  }

  // isolation badge
  .btn-badge.btn-badge {
    flex: 0 0 auto;
    left: 3px;
    margin: 0;
  }
}

